--- a/vb_ODBC.cls
+++ b/vb_ODBC.cls
@@ -105,9 +105,10 @@ Private Declare PtrSafe Function textOutODBC Lib "vbODBC.dll" ( _
                                     ByVal N As Long, _
                                 ByRef SQL_expr As Variant, _
                             ByRef fileName As Variant, _
-                        ByRef delimiter As Variant, _
-                    ByVal quote As Long, _
-                ByVal flushN As Long) As Long
+                        ByVal utf8file As Boolean, _
+                    ByRef delimiter As Variant, _
+                ByVal quote As Boolean, _
+            ByVal flushN As Long) As Long
 
 Private Declare PtrSafe Function SQLGetInstalledDrivers Lib "odbccp32.dll" ( _
                                             ByVal buf As String, _
@@ -298,12 +299,13 @@ End Function
 'テキストファイル出力
 Public Function textOut(ByVal sqlExpr As String, _
                         ByVal fileName As String, _
+                        Optional ByVal utf8file As Boolean = True, _
                         Optional ByVal delimiter As String = ",", _
                         Optional ByVal quote As Boolean = False, _
                         Optional ByVal flushN As Long = 1024) As Long
     mySQL_ = sqlExpr
     laptime_ = GetTickCount()
-    textOut = textOutODBC(myNo_, sqlExpr, fileName, delimiter, IIf(quote, 1, 0), flushN)
+    textOut = textOutODBC(myNo_, sqlExpr, fileName, utf8file, delimiter, quote, flushN)
     laptime_ = GetTickCount() - laptime_
 End Function
 
